WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105259
[chromium] Fix include style in WebTransformOperations.h
https://bugs.webkit.org/show_bug.cgi?id=105259
Summary
[chromium] Fix include style in WebTransformOperations.h
James Robinson
Reported
2012-12-17 23:41:54 PST
[chromium] Fix include style in WebTransformOperations.h
Attachments
Patch
(1.51 KB, patch)
2012-12-17 23:44 PST
,
James Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-12-17 23:44:39 PST
Created
attachment 179886
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-17 23:49:00 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Adrienne Walker
Comment 3
2012-12-18 10:38:06 PST
Comment on
attachment 179886
[details]
Patch R=me.
WebKit Review Bot
Comment 4
2012-12-18 11:45:06 PST
Comment on
attachment 179886
[details]
Patch Clearing flags on attachment: 179886 Committed
r138047
: <
http://trac.webkit.org/changeset/138047
>
WebKit Review Bot
Comment 5
2012-12-18 11:45:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug